web/components/TimeOnIceChart/TimeOnIceChart.module.scss
@import "styles/vars.scss";
@import "styles/Charts.module.scss";

.container {
  height: 100%;
  display: flex;
  flex-direction: column;
  .chartWrapper {
    position: relative;
    height: 100%;
    .loading {
      position: absolute;
      left: 50%;
      top: 25%;
      transform: translate(-50%, -25%);
    }
  }
  // target two option groups
  .allOptions {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  @media only screen and (min-width: $screen-large) {
    .chartWrapper {
      flex: 1;
    }
  }
}

